--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -39,7 +39,6 @@
 }
 
 
-
 * {
   padding: 0;
   margin: 0;
@@ -108,6 +107,10 @@
 .style-button {
   display: flex;
   flex-direction: row;
+}
+
+.style-button a {
+  text-decoration: none;
 }
 
 .style-button button {
