--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -50,7 +50,7 @@ body {
 
 .register-body {
   width: 350px;
-  height: 500px;
+  height: 465px;
   border-radius: 4px;
   margin: 60px auto 0px;
   padding: 20px 30px; 
@@ -78,6 +78,7 @@ body {
   border-color: rgb(204, 204, 204);
   padding: 0px 15px 0px 42px;
   outline: none;
+  margin-top: 7px;
 }
 
 .button-submit button {
@@ -87,6 +88,7 @@ body {
   width: 100%;
   height: 50px;
   border-radius: 4px;
+  margin-top: 35px;
   font-family: SourceSansPro-Semibold;
   color: #fff;
   font-size: 20px;
@@ -102,9 +104,9 @@ body {
   font-size: 14px;
 }
 
-.icon:before {
+.icon {
   position: absolute;
-  margin: -45px 0px 0px 13px;
+  margin: -27px 0px 0px 13px;
   color: rgb(113, 89, 193);
 }
 
@@ -163,4 +165,3 @@ body {
 .signup-icons img:hover {
   opacity: 0.8;
 }
-
