:lipstick: improved the login page layout

--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -50,7 +50,7 @@ body {
 
 .login-body {
   width: 350px;
-  height: 350px;
+  height: 306px;
   border-radius: 4px;
   margin: 140px auto 0px;
   padding: 20px 30px; 
@@ -77,6 +77,11 @@ body {
   border-color: rgb(204, 204, 204);
   padding: 0px 15px 0px 42px;
   outline: none;
+  margin-top: 7px;
+}
+
+.form-body input:focus, .form-body input:active {
+  border-color: rgb(113, 89, 193);
 }
 
 .button-submit button {
@@ -89,6 +94,7 @@ body {
   font-family: SourceSansPro-Semibold;
   color: #fff;
   font-size: 20px;
+  margin-top: 25px;
 }
 
 .button-submit button:hover {
@@ -101,9 +107,9 @@ body {
   font-size: 14px;
 }
 
-.icon:before {
+.icon {
   position: absolute;
-  margin: -45px 0px 0px 13px;
+  margin: -27px 0px 0px 13px;
   color: rgb(113, 89, 193);
 }
 
