--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -50,7 +50,7 @@ body {
 
 .register-body {
   width: 350px;
-  height: 465px;
+  height: 441px;
   border-radius: 4px;
   margin: 60px auto 0px;
   padding: 20px 30px; 
@@ -81,6 +81,10 @@ body {
   margin-top: 7px;
 }
 
+.form-body input:focus, .form-body input:active {
+  border-color: rgb(113, 89, 193);
+}
+
 .button-submit button {
   border: none;
   outline: none;
@@ -88,7 +92,7 @@ body {
   width: 100%;
   height: 50px;
   border-radius: 4px;
-  margin-top: 35px;
+  margin-top: 25px;
   font-family: SourceSansPro-Semibold;
   color: #fff;
   font-size: 20px;
