--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -187,6 +187,10 @@
   height: 40px;
 }
 
+.icon-category:hover {
+  border-bottom: 3px solid rgb(113, 89, 193);
+}
+
 .title {
   text-align: center;
   margin-top: 5px;
@@ -309,11 +313,8 @@ footer {
 }
 
 .user-photo img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  border: 3px solid #ffff;
-  margin-right: 10px;
+  width: 28px;
+  height: 28px;
 }
 
 .user-logout {
@@ -332,4 +333,8 @@ footer {
 
 .user-logout a small {
   color: #fff;
+}
+
+.table {
+  margin: 30px 0;
 }
